# rag-knowledge-assistant

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  LICENSE  README.md  docker-compose.yml
.github/workflows/: test.yml
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: dependencies.py  router.py
backend/app/api/routes/: chat.py  conversations.py  documents.py  health.py  knowledge_bases.py
backend/app/core/: config.py  error_handlers.py  exceptions.py  logging.py  middleware.py
backend/app/database/: base.py  models.py  session.py
backend/app/rag/: __init__.py  chat_provider.py  citations.py  context_builder.py  embeddings.py  loaders.py  pipeline.py  prompts.py  providers.py  retriever.py  splitter.py  vector_store.py
backend/app/schemas/: chat.py  conversation.py  document.py  knowledge_base.py
backend/app/services/: chat_service.py  conversation_service.py  document_service.py  knowledge_base_service.py
backend/app/web/: __init__.py  routes.py
backend/app/web/static/: app.js  styles.css
backend/app/web/templates/: base.html  chat.html  history.html  knowledge_base_detail.html  knowledge_bases.html
backend/evals/: __init__.py  dataset.json  evaluate.py
backend/tests/: conftest.py
backend/tests/fixtures/: sample.docx  sample.md  sample.txt
backend/tests/integration/: test_chat_api.py  test_chat_citations.py  test_chat_web.py  test_conversation_history.py  test_docker_configuration.py  test_document_ingestion.py  test_document_management.py  test_document_upload.py  test_error_handling.py  test_health_api.py  test_input_validation.py  test_knowledge_bases_api.py  test_web_pages.py
backend/tests/unit/: test_chat_provider.py  test_ci_configuration.py  test_citations.py  test_config.py  test_context_builder.py  test_database_models.py  test_database_startup.py  test_documentation_consistency.py  test_embedding_provider.py  test_eval_dataset.py  test_loaders.py  test_logging.py  test_prompt_safety.py  test_prompts.py  test_retriever.py  test_splitter.py  test_vector_store.py
docs/: architecture.md  rag-design.md
