[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-knowledge-assistant"
version = "0.1.0"
description = "A portfolio-grade RAG knowledge assistant built with FastAPI."
readme = "../README.md"
requires-python = ">=3.11"
license = { file = "../LICENSE" }
authors = [
  { name = "rag-knowledge-assistant contributors" },
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
