[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "rag-knowledge-assistant"
version = "1.0.0"
description = "A portfolio-grade RAG knowledge assistant built with FastAPI."
readme = "../README.md"
requires-python = ">=3.11"
license = { file = "../LICENSE" }
authors = [
  { name = "rag-knowledge-assistant contributors" },
]
dependencies = [
  "chromadb>=1.0,<2.0",
  "fastapi>=0.115,<1.0",
  "jinja2>=3.1,<4.0",
  "langchain-core>=0.3,<2.0",
  "langchain-text-splitters>=0.3,<2.0",
  "openai>=1.0,<3.0",
  "pymupdf>=1.24,<2.0",
  "pydantic-settings>=2.0,<3.0",
  "python-docx>=1.1,<2.0",
  "python-multipart>=0.0.9,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.0,<9.0",
  "ruff>=0.6,<1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-ra"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
